Fix arrow gaps for retina

--- a/web/app/themes/brian-thompson/assets/styles/components/_arrows.scss
+++ b/web/app/themes/brian-thompson/assets/styles/components/_arrows.scss
@@ -38,10 +38,10 @@
     height: 100%;
     position: absolute;
     &.-right {
-      left: 100%;
+      left: calc(100% - 1px);
     }
     &.-left {
-      right: 100%;
+      right: calc(100% - 1px);
     }
   }
 }
